--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         os: [windows-latest]
         java-version: [17]
-        gradle-version: [8]
+        gradle-version: [8.x]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Git checkout
