--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,5 +30,8 @@ jobs:
           gradle-version: ${{ matrix.gradle-version }}
           arguments: wrapper
 
+      - name: Run build
+        run: ./gradlew build
+
       - name: Run test
         run: ./gradlew test
